--- a/onetime_setup/pip.yml
+++ b/onetime_setup/pip.yml
@@ -1,5 +1,5 @@
 - name: Create public IP address
   azure_rm_publicipaddress:
-    resource_group: ansiblerg
+    resource_group: "{{ infrarg }}"
     allocation_method: Static
-    name: ansiblepip
+    name: "{{ vmpip }}"
