--- a/onetime_setup/roles/nsg/tasks/nsg.yml
+++ b/onetime_setup/roles/nsg/tasks/nsg.yml
@@ -1,4 +1,4 @@
-- name: Create Network Security Group that allows SSH
+- name: Create Network Security Group "{{ infransg }}" that allows SSH
   azure_rm_securitygroup:
     resource_group: "{{ infrarg }}"
     name: "{{ infransg }}"
