--- a/onetime_setup/roles/vnet-subnet/tasks/main.yml
+++ b/onetime_setup/roles/vnet-subnet/tasks/main.yml
@@ -1,3 +1,9 @@
+- name: Create virtual network "{{ cidrvnet }}"
+  azure_rm_virtualnetwork:
+    resource_group: "{{ infrarg }}"
+    name: "{{ infravnet }}"
+    address_prefixes: "{{ cidrvnet }}"
+
 - name: Add subnet "{{ infrasubnet }}"
   azure_rm_subnet:
     resource_group: "{{ infrarg }}"
