--- a/onetime_setup/roles/nsg/tasks/main.yml
+++ b/onetime_setup/roles/nsg/tasks/main.yml
@@ -9,3 +9,9 @@
         access: Allow
         priority: 1001
         direction: Inbound
+
+  register: outnsg
+
+- debug:
+    msg: "{{ outnsg }}"
+  when: outnsg
