--- a/onetime_setup/roles/vnet-subnet/tasks/main.yml
+++ b/onetime_setup/roles/vnet-subnet/tasks/main.yml
@@ -3,6 +3,11 @@
     resource_group: "{{ infrarg }}"
     name: "{{ infravnet }}"
     address_prefixes: "{{ cidrvnet }}"
+  register: outvnet
+
+- debug:
+    msg: "{{ outvnet }}"
+  when: outvnet
 
 - name: Add subnet "{{ infrasubnet }}"
   azure_rm_subnet:
@@ -11,3 +16,8 @@
     address_prefix: "{{ cidrsubnet }}"
     virtual_network: "{{ infravnet }}"
     security_group: "{{ infransg }}"
+  register: outsubnet
+
+  - debug:
+    msg: "{{ outsubnet }}"
+  when: outsubnet
