included bastion service

--- a/onetime_setup/onetime_setup_vars.yml
+++ b/onetime_setup/onetime_setup_vars.yml
@@ -5,3 +5,9 @@ infrasubnet: ansiblesubnet
 infravnet: ansiblevnet
 cidrvnet: "11.0.0.0/16"
 cidrsubnet: "11.0.1.0/24"
+
+# Bastion subnet info
+infrabastion: AzureBastionSubnet
+cidrbastion: "11.0.2.0/24"
+bastionpip: bastionpip
+bastionname: ansiblevm
