--- a/onetime_setup/onetime_setup_vars.yml
+++ b/onetime_setup/onetime_setup_vars.yml
@@ -10,4 +10,4 @@ cidrsubnet: "11.0.1.0/24"
 infrabastion: AzureBastionSubnet
 cidrbastion: "11.0.2.0/24"
 bastionpip: bastionpip
-bastionname: ansiblevm
+bastionname: bastionservice
