updated rg for diag

--- a/onetime_setup/roles/diagaccount/tasks/main.yml
+++ b/onetime_setup/roles/diagaccount/tasks/main.yml
@@ -1,6 +1,7 @@
 - name: Create diagnoistics storage account for VM
   azure_rm_storageaccount:
     name: "{{ diagaccount }}"
+    resource_group: "{{ infrarg }}"
     location: "{{ location }}"
   register: diagacc
 
