--- a/onetime_setup/roles/diagaccount/tasks/main.yml
+++ b/onetime_setup/roles/diagaccount/tasks/main.yml
@@ -3,7 +3,7 @@
     name: "{{ diagaccount }}"
     resource_group: "{{ infrarg }}"
     location: "{{ location }}"
-    account_type: "{{ Premium_LRS }}""
+    account_type: "{{ Premium_LRS }}"
   register: diagacc
 
 - debug:
