updated standard lrs

--- a/onetime_setup/onetime_setup_vars.yml
+++ b/onetime_setup/onetime_setup_vars.yml
@@ -7,8 +7,8 @@ cidrvnet: "11.0.0.0/16"
 cidrsubnet: "11.0.1.0/24"
 
 # Diagnoistics Storage account 
-diagaccount: cvxvmdiag
-acc_type: Premium_LRS
+diagaccount: vmdiag
+acc_type: Standard_LRS
 
 # Bastion subnet info
 infrabastion: AzureBastionSubnet
