--- a/onetime_setup/roles/nsg/tasks/main.yml
+++ b/onetime_setup/roles/nsg/tasks/main.yml
@@ -9,7 +9,12 @@
         access: Allow
         priority: 1001
         direction: Inbound
-
+      - name: RDP
+        protocol: Tcp
+        destination_port_range: 3389
+        access: Allow
+        priority: 1002
+        direction: Inbound
   register: outnsg
 
 - debug:
@@ -26,6 +31,12 @@
         destination_port_range: 22
         access: Allow
         priority: 1001
+        direction: Inbound
+      - name: RDP
+        protocol: Tcp
+        destination_port_range: 3389
+        access: Allow
+        priority: 1002
         direction: Inbound
 
   register: outnsgdr
